--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>MY WEBSERVER SITE</h1>
 <br/>
-<img src='https://sterrabucket26010412.s3-ap-south-1.amazonaws.com/image.png' width='400' height='400' />
+<img src='https://sterrabucket26010412.s3.ap-south-1.amazonaws.com/image.png' width='400' height='400' />
